--- a/docs/src/main/asciidoc/container-image.adoc
+++ b/docs/src/main/asciidoc/container-image.adoc
@@ -18,7 +18,9 @@ Quarkus provides extensions for building (and pushing) container images. Current
 === JIB
 
 The extension `quarkus-container-image-jib` is powered by https://github.com/GoogleContainerTools/jib[Jib] for performing container builds.
-The major benefit of using Jib with quarkus, is that all dependencies (everything found under target/lib) are cached in a different layer than the actual application making rebuilds extra fast and extra small (when it comes to pushing).
+The major benefit of using Jib with Quarkus, is that all dependencies (everything found under target/lib) are cached in a different layer than the actual application making rebuilds extra fast and extra small (when it comes to pushing).
+Another important benefit of using this extension is that it provides the ability to create a container image without having to have any dedicated client side tooling (like Docker) or running daemon processes (like the Docker daemon)
+when all that is needed is the ability to push to a container image registry.
 
 To use this image extension, you just need to add the following dependency into your project.
 
@@ -50,7 +52,7 @@ To use this image extension, you just need to add the following dependency into 
 The extension `quarkus-container-image-s2i` is using s2i binary builds in order to perform container builds inside the Openshift cluster.
 The idea behind the binary build is that you just upload the the artifact and its dependencies to the cluster and during the build they will be merged to a builder image (defaults to `fabric8/s2i-java`).
 
-The benefit of this approach, is that it can be combined with Openshifts `DeploymentConfig` that makes it easy to rollout changes to the cluster.
+The benefit of this approach, is that it can be combined with Openshift's `DeploymentConfig` that makes it easy to rollout changes to the cluster.
 
 To use this image extension, you just need to add the following dependency into your project.
 
@@ -88,22 +90,22 @@ For customizing the extension the following properties are available:
 
 .Container Image
 |====
-| Property                                | Type                            | Description                       | Default Value
-| quarkus.container-image.group           | String                          | The group/repository of the image | The ${user.name}
-| quarkus.container-image.name            | String                          | The name of the image             | The application name
-| quarkus.container-image.tag             | String                          | The tag of the image              | The application version
-| quarkus.container-image.registry        | String                          | The registry to use for pushing   | docker.io
-| quarkus.container-image.username        | String                          | The registry username             |
-| quarkus.container-image.password        | String                          | The registry password             |
-| quarkus.container-image.insecure        | Boolean                         | Flag to allow insecure registries | false
-| quarkus.container-image.execution       | Enumeration (NONE, BUILD, PUSH) | The kind of execution (see below) | NONE
+| Property                                | Type                            | Description                                                            | Default Value
+| quarkus.container-image.group           | String                          | The group/repository of the image                                      | The ${user.name}
+| quarkus.container-image.name            | String                          | The name of the image                                                  | The application name
+| quarkus.container-image.tag             | String                          | The tag of the image                                                   | The application version
+| quarkus.container-image.registry        | String                          | The registry to use for pushing                                        |
+| quarkus.container-image.username        | String                          | The registry username                                                  |
+| quarkus.container-image.password        | String                          | The registry password                                                  |
+| quarkus.container-image.insecure        | Boolean                         | Flag to allow insecure registries                                      | false
+| quarkus.container-image.build           | Boolean                         | Flag to enable building of a container image                           | false
+| quarkus.container-image.push            | Boolean                         | Flag to enable pushing of a container image to the configured registry | false
 |====
 
 === Jib Options
 
-On top the the global container image options, the following jib specific options are availble:
+On top the the global container image options, the following jib specific options are available:
 
-.Jib Options
 |====
 | Property                                          | Type                            | Description                                     | Default Value
 | quarkus.container-image-jib.base-jvm-image        | String                          | The base image to use for the jib build         | fabric8/java-alpine-openjdk8-jre
@@ -116,9 +118,8 @@ On top the the global container image options, the following jib specific option
 
 === Docker Options
 
-On top the the global container image options, the following docker specific options are availble:
+On top the the global container image options, the following docker specific options are available:
 
-.Dokcer Options
 |====
 | Property                                              | Type                            | Description                                     | Default Value
 | quarkus.container-image-docker.dockerfile-jvm-path    | String                          | Path to the JVM Dockerfile                      | ${project.root}/src/main/docker/Dockerfile.jvm
@@ -127,9 +128,8 @@ On top the the global container image options, the following docker specific opt
 
 === S2i  Options
 
-On top the the global container image options, the following s2i specific options are availble:
+On top the the global container image options, the following s2i specific options are available:
 
-.S2i Options
 |====
 | Property                                             | Type                            | Description                                     | Default Value
 | quarkus.container-image-s2i.base-jvm-image           | String                          | The base image to use for the s2i build         | fabric8/java-alpine-openjdk8-jre
